auto-test/tests/chapter_18/invalid_types/scalar_required/and_struct.c
struct s {
    int a;
};

int main(void) {
    struct s x = {1};
    return 0 && x;  
}